--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
   "dependencies": {
-    "discord.js": "^12.5.3",
-    "express": "^4.17.1",
-    "js-levenshtein": "^1.1.6",
-    "node-html-parser": "^3.1.2",
-    "request": "^2.88.2",
-    "sequelize": "^6.12.2",
-    "sqlite3": "^4.2.0"
+     "discord.js": "^12.5.3",
+     "express": "^4.17.2",
+     "js-levenshtein": "^1.1.6",
+     "node-html-parser": "^5.1.0",
+     "request": "^2.88.2",
+     "sequelize": "^6.12.2",
+     "sqlite3": "^5.0.2"
   },
   "name": "nonsusbot",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js & node heroku.js"
+    "start": "node index.js & node heroku.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "description": "",
   "private": "true",
   "engines": {
-    "node": ">=14.x"
+    "node": ">=16.x"
   }
 }
