--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node dbInit.js && node index.js & node heroku.js",
+    "start": "node init_db.js && node index.js & node heroku.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
