Fix configuration for background tasks

--- a/default_server_config.json
+++ b/default_server_config.json
@@ -1,6 +1,7 @@
 {
   "prefix": "_",
   "m_channel_id": "",
+  "log_channel_id": "",
   "verify_channel_id": "",
   "verify_role_id": "",
   "vip_role_id": ""
