--- a/default_server_config.json
+++ b/default_server_config.json
@@ -2,6 +2,7 @@
   "prefix": "_",
   "m_channel_id": "",
   "log_channel_id": "",
+  "level_channel_id": "",
   "verify_channel_id": "",
   "verify_role_id": "",
   "vip_role_id": ""
