--- a/development_config.json
+++ b/development_config.json
@@ -1,4 +1,6 @@
 {
   "developer_discord_user_ids": ["484644637420552202", "786301097953591326"],
-  "development_discord_server_ids": ["923608463219781672"]
+  "development_discord_server_ids": ["923608463219781672"],
+  "testing_bot_token": "OTI1MzExMTUwMjQ4MzAwNTc0.YcrRKQ.Tu-nxJhFOuFG4HfBV4zhddtZo6w",
+  "testing_discord_server_id": "923608463219781672"
 }
