Add help command and mention tests

--- a/development_config.json
+++ b/development_config.json
@@ -4,5 +4,5 @@
   "development_bot_discord_user_id": "923609069598695516",
   "testing_bot_token": "OTI1MzExMTUwMjQ4MzAwNTc0.YcrRKQ.Tu-nxJhFOuFG4HfBV4zhddtZo6w",
   "testing_discord_server_id": "923608463219781672",
-  "testing_bot_discord_user_id": "925311150248300574",
+  "testing_bot_discord_user_id": "925311150248300574"
 }
