--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
-    "jest": "^27.4.5"
+    "jest": "^27.4.5",
+    "jest-extended": "^1.2.0"
   },
   "name": "nonsusbot",
   "version": "1.1.0",
@@ -18,7 +19,7 @@
     "heroku-start": "node init_db.js && node . & node heroku.js",
     "start": "node init_db.js && node .",
     "clean": "rm -rf node_modules server_config.json database.sqlite",
-    "test": "npm start &> /dev/null & jest"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
