--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
+    "fuzzing": "^0.12.21",
     "jest": "^27.4.5",
     "jest-extended": "^1.2.0"
   },
