--- a/package.json
+++ b/package.json
@@ -8,11 +8,6 @@
     "sequelize": "^6.12.2",
     "sqlite3": "^5.0.2"
   },
-  "devDependencies": {
-    "fuzzing": "^0.12.21",
-    "jest": "^27.4.5",
-    "jest-extended": "^1.2.0"
-  },
   "name": "nonsusbot",
   "version": "1.1.3",
   "main": "index.js",
@@ -20,7 +15,7 @@
     "heroku-start": "node init_db.js && node . & node heroku.js",
     "start": "node init_db.js && node .",
     "clean": "rm -rf node_modules server_config.json database.sqlite",
-    "test": "jest"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
