--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "express": "^4.17.2",
     "js-levenshtein": "^1.1.6",
     "node-html-parser": "^5.2.0",
+    "pm2": "^5.1.2",
     "request": "^2.88.2",
     "sequelize": "^6.12.2",
     "sqlite3": "^5.0.2"
@@ -18,7 +19,8 @@
   "main": "index.js",
   "scripts": {
     "heroku-start": "node init_db.js && node . & node heroku.js",
-    "start": "node init_db.js && node .",
+    "start": "node init_db.js && pm2 start index.js",
+    "stop": "pm2 stop index.js",
     "clean": "rm -rf node_modules server_config.json database.sqlite",
     "test": "node init_db.js && jest"
   },
