--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "scripts": {
     "start": "mkdir logs; node init_db.js && pm2 start ecosystem.config.js",
     "log": "echo 'Streaming logs to http://127.0.0.1:9001' && frontail logs/*",
+    "status": "pm2 status discord-bot",
     "stop": "pm2 stop index.js",
     "test": "node init_db.js && jest"
   },
