--- a/development_config.json
+++ b/development_config.json
@@ -1,5 +1,6 @@
 {
   "developer_discord_user_ids": ["484644637420552202", "786301097953591326"],
+  "artist_discord_user_ids": ["870459600883818587"],
   "development_discord_server_ids": ["923608463219781672"],
   "main_bot_discord_user_id": "923609069598695516",
   "testing_bot_token": "OTI1MzExMTUwMjQ4MzAwNTc0.YcrRKQ.Tu-nxJhFOuFG4HfBV4zhddtZo6w",
