Add table of contents creation tool to .gitignore and add descriptions in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
+# Files created during development
 *.swp
 .DS_Store
 
+# Files created by installation
 node_modules
 
+# Files created while running bot
 *.sqlite
 server_config.json
 logs
+
+# For making README.md table of contents (https://github.com/ekalinin/github-markdown-toc)
+gh-md-toc
