--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
+    "eslint": "^8.6.0",
     "frontail": "^4.9.2",
     "fuzzing": "^0.12.21",
     "jest": "^27.4.5",
