Fix formatting using eslint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,8 @@
 {
     "env": {
-        "browser": true,
         "commonjs": true,
-        "es2021": true
+        "es2021": true,
+        "node": true
     },
     "extends": "eslint:recommended",
     "parserOptions": {
@@ -24,6 +24,16 @@
         "semi": [
             "error",
             "always"
-        ]
+        ],
+        "no-var": "error",
+        "prefer-const": ["error", {
+            "destructuring": "any"
+        }]
+    },
+    "globals": {
+        "testing": "writable",
+        "__basedir": "writable",
+        "__dirname": "readonly",
+        "process": "readonly"
     }
 }
