--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "dependencies": {
+    "@mapbox/node-pre-gyp": "github:mapbox/node-pre-gyp",
     "discord.js": "^13.5.0",
     "js-levenshtein": "^1.1.6",
+    "node": "^17.3.0",
     "node-html-parser": "^5.2.0",
+    "node-pre-gyp": "^0.17.0",
     "pm2": "^5.1.2",
     "request": "^2.88.2",
-    "sequelize": "^6.12.2",
+    "sequelize": "^6.13.0",
+    "sqlite": "^4.0.23",
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
