--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "bot_name": "Graveyard",
-  "bot_token": "OTIzNjA5MDY5NTk4Njk1NTE2.YcSf-g.sk5FFknHEgeyeVa69D82yLevd-0",
+  "bot_token": "ODI1Nzc5NjUwODIyMjc1MTUy.YGC5Ow.A7TTxiWIwt7WVWgFLeSibfGIcbs",
   "dictionary_api_key": "4547442b-aae6-45a0-a5d9-ffe2b7a86406",
   "x_rapidapi_key": "740620e68emshf67ff49c3a546f4p127728jsn62badb256c0c",
   "very_ninja_php_session_id": "5s9traesdujjhbrevhf77etrot"
