--- a/default_server_config.json
+++ b/default_server_config.json
@@ -5,5 +5,6 @@
   "level_channel_id": "",
   "verify_channel_id": "",
   "verify_role_id": "",
-  "vip_role_id": ""
+  "vip_role_id": "",
+  "welcome_channel_id": ""
 }
