--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Files created during development
 *.swp
+*.swo
 .vscode
 .DS_Store
 gh-md-toc # For making README.md table of contents (https://github.com/ekalinin/github-markdown-toc)
