--- a/default_server_config.json
+++ b/default_server_config.json
@@ -7,5 +7,6 @@
   "welcome_channel_id": "",
   "levelup_channel_id": "",
   "suggestion_channel_id": "",
-  "send_suggestion_channel_id": ""
+  "send_suggestion_channel_id": "",
+  "counting_channel_id": ""
 }
