--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
   "private": "true",
   "engines": {
     "node": ">=16.x >=17.x"
+  },
+  "optionalDependencies": {
+    "bufferutil": "^4.0.6",
+    "utf-8-validate": "^5.0.8"
   }
 }
