--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,8 @@ gh-md-toc # For making README.md table of contents (https://github.com/ekalinin/
 node_modules
 
 # Token
-config.json
-development_config.json
+#config.json
+#development_config.json
 
 # Files created while running bot
 *.sqlite
