--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.2.5",
   "main": "index.js",
   "scripts": {
-    "start": "mkdir logs; node init_db.js && pm2 start ecosystem.config.js",
+    "start": "mkdir logs; node init_db.js && pm2 start ecosystem.config.js && tail -f logs/*",
     "log": "echo 'Streaming logs to http://127.0.0.1:9001' && frontail logs/*",
     "status": "pm2 status discord-bot",
     "stop": "pm2 stop index.js",
