Add language config option

--- a/default_server_config.json
+++ b/default_server_config.json
@@ -8,5 +8,6 @@
   "levelup_channel_id": "",
   "suggestion_channel_id": "",
   "send_suggestion_channel_id": "",
-  "counting_channel_id": ""
+  "counting_channel_id": "",
+  "language": "en"
 }
