--- a/default_server_config.json
+++ b/default_server_config.json
@@ -10,5 +10,6 @@
   "send_suggestion_channel_id": "",
   "counting_channel_id": "",
   "language": "en",
-  "detailed_logging": "false"
+  "detailed_logging": "false",
+  "mute_role_id": ""
 }
