--- a/development_config.json
+++ b/development_config.json
@@ -1,7 +1,7 @@
 {
   "developer_shoutouts": ["talloween/Instagram: photosfromthenordic\n", "poki\n"],
   "artist_shoutouts": ["talloween/Instagram: photosfromthenordic\n", "poki\n"],
-  "translator_shoutouts": ["spicular/Tiktok: .spicular\n", "diana/Instagram: lovelydianan\n", "finnish egirl/Twitter: EgirlFinnish\n", "vicky/Tiktok: vicksphobia\n", "poki\n", "steph\n", "indigo\n"],
+  "translator_shoutouts": ["spicular/Tiktok: .spicular\n", "diana/Instagram: lovelydianan\n", "finnish egirl/Twitter: EgirlFinnish/Instagram: finnish_egirl/Tiktok: copeharder2.com\n", "vicky/Tiktok: vicksphobia\n", "poki\n", "steph\n", "indigo\n"],
   "development_discord_server_ids": ["955522612346359809"],
   "main_bot_discord_user_id": "923609069598695516",
   "testing_bot_token": "OTI1MzExMTUwMjQ4MzAwNTc0.YcrRKQ.zaVB6nM0eoA23lxSHxQl8W3gBvg",
