refined the guild options; created docs in the config file using mintlify;

--- a/default_server_config.json
+++ b/default_server_config.json
@@ -14,5 +14,6 @@
   "allow_illegal_names": "true",
   "numbers_in_counting": "true",
   "profanity_filter": "false",
-  "allow_links": "true"
+  "allow_links": "true",
+  "max_word_count": ""
 }
