--- a/development_config.json
+++ b/development_config.json
@@ -1,4 +1,5 @@
 {
+  "bot_socials": ["Twitter: graveyarddeveloper"],
   "developer_shoutouts": ["talloween/Instagram: photosfromthenordic\n", "poki\n"],
   "artist_shoutouts": ["talloween/Instagram: photosfromthenordic\n", "poki\n"],
   "translator_shoutouts": ["spicular/Tiktok: .spicular\n", "diana/Instagram: lovelydianan\n", "finnish egirl/Twitter: EgirlFinnish/Instagram: finnish_egirl/Tiktok: copeharder2.com\n", "vicky/Tiktok: vicksphobia\n", "poki\n", "steph\n", "indigo\n"],
