redid the shop; uhh a bunch of shit that takes too long to explain; shop is now an interactive menu; you can sell items and buy items; theres different categories; its pretty cool; this took way too long;

--- a/development_config.json
+++ b/development_config.json
@@ -1,5 +1,6 @@
 {
   "bot_socials": ["Twitter: graveyarddeveloper"],
+  "developer_discord_user_ids": ["786301097953591326", "604013405254189070"],
   "developer_shoutouts": ["talloween/Instagram: photosfromthenordic\n", "poki\n"],
   "artist_shoutouts": ["talloween/Instagram: photosfromthenordic\n", "poki\n"],
   "translator_shoutouts": ["spicular/Tiktok: .spicular\n", "diana/Instagram: lovelydianan\n", "finnish egirl/Twitter: EgirlFinnish/Instagram: finnish_egirl/Tiktok: copeharder2.com\n", "vicky/Tiktok: vicksphobia\n", "poki\n", "steph\n", "indigo\n"],
