--- a/package.json
+++ b/package.json
@@ -22,14 +22,15 @@
     "i18n": "^0.14.2",
     "js-levenshtein": "^1.1.6",
     "ms": "^2.1.3",
-    "node": "^17.3.0",
+    "node": "^17.7.2",
     "node-html-parser": "^5.2.0",
     "node-pre-gyp": "^0.17.0",
+    "nodejs": "^0.0.0",
     "pm2": "^5.2.0",
     "request": "^2.88.2",
     "sequelize": "^6.13.0",
     "sqlite": "^4.0.25",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^4.2.0"
   },
   "devDependencies": {
     "eslint": "^8.6.0",
