--- a/default_server_config.json
+++ b/default_server_config.json
@@ -2,7 +2,6 @@
   "prefix": "_",
   "welcome_message": "{user} left {server}. What a shame!",
   "leave_message": "Welcome {user} to {server}. Glad to have you here!",
-  "m_channel_id": "",
   "log_channel_id": "",
   "verify_channel_id": "",
   "verify_role_id": "",
@@ -17,5 +16,5 @@
   "numbers_in_counting": "true",
   "profanity_filter": "false",
   "allow_links": "true",
-  "max_word_count": ""
+  "max_word_count": "10000"
 }
