--- a/default_server_config.json
+++ b/default_server_config.json
@@ -13,7 +13,7 @@
   "language": "en",
   "detailed_logging": "false",
   "allow_illegal_names": "true",
-  "numbers_in_counting": "true",
+  "no_nans_in_counting": "false",
   "profanity_filter": "false",
   "allow_links": "true",
   "max_word_count": "10000"
