--- a/GRAVEYARD DISCORD.JS V13/package.json
+++ b/GRAVEYARD DISCORD.JS V13/package.json
@@ -1,11 +1,13 @@
 {
   "name": "graveyard-discord.js-v13",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Discord Bot",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node update_commands.js && node main.js"
+    "start": "node update_commands.js && node main.js",
+    "update": "npm version patch",
+    "sync": "cd database && node sync_db.js && node db_objects.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +28,8 @@
     "discord-api-types": "^0.33.5",
     "discord.js": "^13.8.0",
     "fs": "^0.0.1-security",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "sequelize": "^6.20.1",
+    "sqlite3": "^5.0.8"
   }
 }
