--- a/GRAVEYARD DISCORD.JS V13/package.json
+++ b/GRAVEYARD DISCORD.JS V13/package.json
@@ -5,9 +5,8 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node update_commands.js && node main.js",
-    "update": "npm version patch",
-    "sync": "cd database && node sync_db.js && node db_objects.js"
+    "start": "node sync_db.js && node db_objects.js && node update_commands.js && node main.js",
+    "update": "npm version patch"
   },
   "repository": {
     "type": "git",
