--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,11 @@ node_modules
 server_config.json
 logs
 
-# Files create when running the python dashboard api script
-venv
+# Files required to run the python dashboard api script
+GRAVEYARD DISCORD.JS V13/dashboard_api/.env
+
+# Files created when running the python dashboard api script
+GRAVEYARD DISCORD.JS V13/dashboard_api/venv
+GRAVEYARD DISCORD.JS V13/dashboard_api/sessions.json
 *.pyc
 __pycache__
