--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 .DS_Store
 gh-md-toc # For making README.md table of contents (https://github.com/ekalinin/github-markdown-toc)
 errors.txt
+logs.txt
 
 # Files created by installation
 node_modules
