--- a/.gitignore
+++ b/.gitignore
@@ -16,8 +16,8 @@ node_modules
 
 # Files created while running bot
 *.sqlite
-*.db
-database.db
+GRAVEYARD DISCORD.JS V13/database.db
+GRAVEYARD DISCORD.JS V13\database.db
 server_config.json
 logs
 
