Added 2 configs in development_config.json

--- a/GRAVEYARD DISCORD.JS V13/configs/development_config.json
+++ b/GRAVEYARD DISCORD.JS V13/configs/development_config.json
@@ -1,3 +1,4 @@
 {
-    "beta_tester_discord_ids": ["786301097953591326", "604013405254189070"]
+    "devServerInviteLink": "https://discord.gg/UTtj55AtNn",
+    "websiteLink": "https://google.com/"
 }
