added fully customisable welcome and goodbye messages added image link support in makeEmbed added new configs in viewconfig and resetconfig

--- a/GRAVEYARD DISCORD.JS V13/configs/default_server_config.json
+++ b/GRAVEYARD DISCORD.JS V13/configs/default_server_config.json
@@ -13,6 +13,8 @@
   "normalize_non_unicode_names": [null],
   "max_word_count": [null],
   "welcome_message": [null],
-  "goodbye_message": [null]
+  "goodbye_message": [null],
+  "welcome_image": [null],
+  "goodbye_image": [null]
 }
   
