--- a/GRAVEYARD DISCORD.JS V13/configs/graveyard_config.json
+++ b/GRAVEYARD DISCORD.JS V13/configs/graveyard_config.json
@@ -1,6 +1,4 @@
 {
 	"token": "OTU1NTM3MTUzMzg1OTYzNTIy.GNSHj1.EfKKBecrW6Af1D53hhV0zkDMaz8bqqbktdI3b8",
-    "graveyardID": "955537153385963522",
-    "devServerID": "955522612346359809",
-    "development": true
+    "bot_id": "955537153385963522"
 }
