Added more logging Changed some logging colors

--- a/GRAVEYARD DISCORD.JS V13/configs/default_server_config.json
+++ b/GRAVEYARD DISCORD.JS V13/configs/default_server_config.json
@@ -1,21 +1,31 @@
 {
-  "log_channel": [null],
-  "verification_channel": [null],
-  "verification_request_channel": [null],
-  "counting_channel": [null],
-  "leveling_channel": [null],
-  "welcome_channel": [null],
-  "goodbye_channel": [null],
-  "confession_channel": [null],
-  "remove_bad_words": [null],
-  "remove_links": [null],
-  "detailed_logging": [null],
-  "remove_non_numbers_in_the_counting_channel": [null],
-  "normalize_non_unicode_names": [null],
-  "max_word_count": [null],
-  "welcome_message": [null],
-  "goodbye_message": [null],
-  "welcome_image": [null],
-  "goodbye_image": [null]
+  "log_channel": null,
+  "verification_channel": null,
+  "verification_request_channel": null,
+  "counting_channel": null,
+  "leveling_channel": null,
+  "welcome_channel": null,
+  "goodbye_channel": null,
+  "confession_channel": null,
+  "remove_bad_words": null,
+  "remove_links": null,
+  "detailed_logging": null,
+  "remove_non_numbers_in_the_counting_channel": null,
+  "normalize_non_unicode_names": null,
+  "max_word_count": null,
+  "welcome_message": null,
+  "goodbye_message": null,
+  "welcome_image": null,
+  "goodbye_image": null,
+
+  "log_command_interactions": null,
+  "log_message_deletions": null,
+  "log_channel_edits": null,
+  "log_role_edits": null, 
+  "log_bans": null,
+  "log_invites": null,
+  "log_user_updates": null,
+  "log_sticker_edits": null,
+  "log_message_updates": null
 }
   
