--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "bot",
   "version": "1.0.0",
-  "description": "",
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,6 +17,8 @@
   },
   "homepage": "https://github.com/Graveyard-Dev/bot#readme",
   "dependencies": {
-    "discord.js": "^14.0.3"
-  }
+    "discord.js": "^14.0.3",
+    "eslint": "^8.20.0"
+  },
+  "description": ""
 }
