--- a/sources/botConfigs.json
+++ b/sources/botConfigs.json
@@ -1,3 +1,4 @@
 {
-    "token": "OTk5NjY3MDQ2OTQ4Mjg2NDg1.G8QCIr.sBlqvz-dqEKGtabLMqKVTGY0RvIkNtSkqZDnno"
+    "token": "OTk5NjY3MDQ2OTQ4Mjg2NDg1.G8QCIr.sBlqvz-dqEKGtabLMqKVTGY0RvIkNtSkqZDnno",
+    "botId": "999667046948286485"
 }
