--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -105,7 +105,7 @@
             "terms": ["todo", "fix", "fixme"],
             "location": "anywhere"
         }],
-        "spaced-comments": "warn",
+        "spaced-comment": "warn",
         "line-comment-position": "warn",
         "object-shorthand": "error",
         "operator-assignment": "error",
@@ -158,7 +158,7 @@
         }],
         "no-trailing-spaces": "error",
         "no-whitespace-before-property": "error",
-        "non-block-statement-body-position": "error",
+        "nonblock-statement-body-position": "error",
         "object-curly-newline": ["error", {
             "multiline": true,
             "consistent": true,
