--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "bot",
+  "description": "",
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
@@ -22,6 +23,5 @@
   },
   "devDependencies": {
     "eslint": "^8.20.0"
-  },
-  "description": ""
+  }
 }
