--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
   "homepage": "https://github.com/Graveyard-Dev/bot#readme",
   "dependencies": {
     "discord.js": "^14.0.3",
+    "eslint": "^8.22.0",
     "mongoose": "^6.4.6"
-  },
-  "devDependencies": {
-    "eslint": "^8.21.0"
   }
 }
